# cubic3-data-platform

./: .dockerignore  .env.backup  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  coverage.xml  deploy.sh  docker-compose.yml  entrypoint.sh  env.sample  lighthouserc.json  pytest.ini  requirements.txt  run_worker.py  start_rq_worker.sh  test_pencil.pen  uiv2.pen  wsgi.py
.github/: copilot-instructions.md
.husky/: pre-commit  pre-push
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
app/: __init__.py  config_schema.py  extensions.py
cli/: README.md  pyproject.toml
cli/cubic3_dp_cli/: __init__.py  app.py  client.py  config.py  envelope.py  main.py  output.py  runtime.py
cli/cubic3_dp_cli/commands/: __init__.py  asset.py  auth.py  chat.py  cube.py  datasource.py  describe.py  governance.py  intent.py  manifest.py  ontology.py  proposal.py  query.py  release.py  semantic.py  view.py
cli/tests/: test_parity.py  test_t1_commands.py
docker/: nginx.Dockerfile
docs/: DESIGN.md  DOC_ALIGNMENT_REPORT.md  FRONTEND_ARCHITECTURE_REVIEW.md  FRONTEND_FIX_SUMMARY.md  KNOWLEDGE_BASE_GOVERNANCE.md  KNOWLEDGE_BASE_MAINTENANCE_SOP.md  METADATA_SYNC_FRONTEND.md  METADATA_SYNC_GUIDE.md  METADATA_SYNC_QUICKSTART.md  MIGRATION_GUIDE.md  QUICK_START.md  STARTUP_GUIDE.md  TECH_STACK_AND_ARCHITECTURE.md  TROUBLESHOOTING.md  readme.md  semantic-glossary.md  semantic_verification.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  COMPONENT_STYLE_GUIDE.md  QUICK_START_SHADCN.md  QueryBuilder.tsx  README.md  index.html  package-lock.json  (+9 more)
(+2489 files in other folders)
